// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`validatePnpmConfig > when npmrcExists: false, hasRecommendedPnpmVersionInstalled: false, pnpmPluginSkuInstalled: false > should log appropriate messages 1`] = `
[
  [
    "In order for sku to best manage your PNPM config, please update to PNPM v10.13.0 or later, run "pnpm add --config pnpm-plugin-sku", delete your top-level node_modules directory and finally run "pnpm install".",
  ],
]
`;

exports[`validatePnpmConfig > when npmrcExists: false, hasRecommendedPnpmVersionInstalled: false, pnpmPluginSkuInstalled: true > should log appropriate messages 1`] = `
[
  [
    "In order for sku to best manage your PNPM config, please update to PNPM v10.13.0 or later, run "pnpm add --config pnpm-plugin-sku", delete your top-level node_modules directory and finally run "pnpm install".",
  ],
]
`;

exports[`validatePnpmConfig > when npmrcExists: false, hasRecommendedPnpmVersionInstalled: true, pnpmPluginSkuInstalled: false > should log appropriate messages 1`] = `
[
  [
    "In order for sku to best manage your PNPM config, please update to PNPM v10.13.0 or later, run "pnpm add --config pnpm-plugin-sku", delete your top-level node_modules directory and finally run "pnpm install".",
  ],
]
`;

exports[`validatePnpmConfig > when npmrcExists: false, hasRecommendedPnpmVersionInstalled: true, pnpmPluginSkuInstalled: true > should log appropriate messages 1`] = `[]`;

exports[`validatePnpmConfig > when npmrcExists: true, hasRecommendedPnpmVersionInstalled: false, pnpmPluginSkuInstalled: false > should log appropriate messages 1`] = `
[
  [
    "Detected .npmrc file.",
  ],
  [
    "Please migrate all .npmrc configuration to pnpm-workspace.yaml and add .npmrc to your .gitignore. See https://pnpm.io/settings for more information.",
  ],
  [
    "In order for sku to best manage your PNPM config, please update to PNPM v10.13.0 or later, run "pnpm add --config pnpm-plugin-sku", delete your top-level node_modules directory and finally run "pnpm install".",
  ],
]
`;

exports[`validatePnpmConfig > when npmrcExists: true, hasRecommendedPnpmVersionInstalled: false, pnpmPluginSkuInstalled: true > should log appropriate messages 1`] = `
[
  [
    "Detected .npmrc file.",
  ],
  [
    "Please migrate all .npmrc configuration to pnpm-workspace.yaml and add .npmrc to your .gitignore. See https://pnpm.io/settings for more information.",
  ],
  [
    "In order for sku to best manage your PNPM config, please update to PNPM v10.13.0 or later, run "pnpm add --config pnpm-plugin-sku", delete your top-level node_modules directory and finally run "pnpm install".",
  ],
]
`;

exports[`validatePnpmConfig > when npmrcExists: true, hasRecommendedPnpmVersionInstalled: true, pnpmPluginSkuInstalled: false > should log appropriate messages 1`] = `
[
  [
    "Detected .npmrc file.",
  ],
  [
    "Please migrate all .npmrc configuration to pnpm-workspace.yaml and add .npmrc to your .gitignore. See https://pnpm.io/settings for more information.",
  ],
  [
    "In order for sku to best manage your PNPM config, please update to PNPM v10.13.0 or later, run "pnpm add --config pnpm-plugin-sku", delete your top-level node_modules directory and finally run "pnpm install".",
  ],
]
`;

exports[`validatePnpmConfig > when npmrcExists: true, hasRecommendedPnpmVersionInstalled: true, pnpmPluginSkuInstalled: true > should log appropriate messages 1`] = `
[
  [
    "Detected .npmrc file.",
  ],
  [
    "Please migrate all .npmrc configuration to pnpm-workspace.yaml and add .npmrc to your .gitignore. See https://pnpm.io/settings for more information.",
  ],
]
`;
